--- a/src/components/ngSmartGrid.styl
+++ b/src/components/ngSmartGrid.styl
@@ -7,14 +7,14 @@
 .j-grid
   white-space nowrap
   position relative
-  // &:after
-  //   content ""
-  //   position absolute
-  //   top 0
-  //   bottom 0
-  //   right 0
-  //   background linear-gradient(to right, rgba(255,255,255,0) 0%, rgba(255,255,255,1) 100%)
-  //   width 30px
+  &:after
+    content ""
+    position absolute
+    top 0
+    bottom 0
+    right 0
+    background linear-gradient(to right, rgba(255,255,255,0) 0%, rgba(255,255,255,1) 100%)
+    width 30px
   .j-table
     display inline-block
     * tr.totals
