move cog to the right

--- a/src/components/ngSmartGrid.pug
+++ b/src/components/ngSmartGrid.pug
@@ -1,5 +1,9 @@
-button.btn.btn-sm.btn-default(data-toggle='modal' data-target='\#{{sgc.config.gridId}}-config', title='Grid options')
-  i.fa.fa-cog
+.pull-right
+  .pull-left
+    button.btn.btn-sm.btn-default(data-toggle='modal' data-target='\#{{sgc.config.gridId}}-config', title='Grid options')
+      i.fa.fa-cog
+  .clearfix
+.clearfix
 .j-grid(id='{{sgc.config.gridId}}-grid')
   .j-table.locked-table
     table.table.table-condensed.table-striped.mgn-bottom-0
